# you-got-robot-in-python

./: LICENSE  README.md  pyproject.toml
CustomLibraries/HttpBinLibrary/: HttpBinLibrary.py
Data/: DataVariables.yaml
DemoTests/: HttpBinTests.robot
Examples/DemoScripts/: run_keyword.py  setup_project.py
Examples/Importing/: 00__direct_import.py  01__direct_import.py  01__direct_import_as.py  02__from_import.py  03__instantiated.py  04__inheritance.py  constants.py  direct_import.py  from_import.py  inheritance.py  instantiated.py
Presentation/: outline.txt
Resources/: Resource.resource
Results/: .gitkeep  README.md  log.html  output.xml  report.html
